Fix alignment of checkboxes in IE7

--- a/app/assets/stylesheets/govuk_admin_template/bootstrap-ie7.scss
+++ b/app/assets/stylesheets/govuk_admin_template/bootstrap-ie7.scss
@@ -104,7 +104,8 @@ input[type="submit"] {
 /* Remove excess padding in IE 7 */
 input[type="checkbox"],
 input[type="radio"] {
-  margin-top: 0;
+  margin-top: 5px;
+  margin-right: 10px;
   height: 13px;
   width: 13px;
 }
